# pulsekey

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
config/: games.yaml
include/: game_config.h
resources/: icon.rc
src/: game_config.cpp  main.cpp
